# jaxley

./: .gitignore  .typos.toml  CHANGELOG.md  Makefile  pyproject.toml
dev/: objects.inv
dev/reference/connect/: index.html
dev/reference/integration/: index.html
dev/reference/mechanisms/: index.html
dev/reference/modules/: index.html
dev/reference/optimize/: index.html
dev/reference/utils/: index.html
dev/search/: search_index.json
dev/tutorial/00_jaxley_api/: index.html
dev/tutorial/01_morph_neurons/: index.html
dev/tutorial/02_small_network/: index.html
dev/tutorial/04_jit_and_vmap/: index.html
dev/tutorial/05_channel_and_synapse_models/: index.html
dev/tutorial/06_groups/: index.html
dev/tutorial/07_gradient_descent/: index.html
dev/tutorial/08_importing_morphologies/: index.html
dev/tutorial/09_advanced_indexing/: index.html
dev/tutorial/10_advanced_parameter_sharing/: index.html
dev/tutorial/11_ion_dynamics/: index.html
dev/tutorial/12_simplified_models/: index.html
dev/tutorial/13_graph_backend/: index.html
docs/tutorials/: 00_jaxley_api.ipynb  01_morph_neurons.ipynb  02_small_network.ipynb  04_jit_and_vmap.ipynb  05_channel_and_synapse_models.ipynb  06_groups.ipynb  07_gradient_descent.ipynb  08_importing_morphologies.ipynb  09_advanced_indexing.ipynb  10_advanced_parameter_sharing.ipynb  11_ion_dynamics.ipynb  12_simplified_models.ipynb  13_graph_backend.ipynb
jaxley/: __init__.py  connect.py  integrate.py  solver_gate.py  solver_voltage.py  stimulus.py
jaxley/channels/: __init__.py  channel.py  hh.py  pospischil.py
jaxley/channels/non_capacitive/: izhikevich.py  rate.py  spike.py
jaxley/io/: graph.py  swc.py
jaxley/modules/: __init__.py  base.py  branch.py  cell.py  compartment.py  network.py
jaxley/morphology/: __init__.py  distance_utils.py  morph_utils.py
jaxley/optimize/: optimizer.py  transforms.py
jaxley/pumps/: __init__.py  ca_pump.py  faraday_electrolysis.py  nernstreversal.py  pump.py
jaxley/synapses/: ionotropic.py  synapse.py  tanh_conductance.py  tanh_rate.py  test.py
jaxley/utils/: cell_utils.py  colors.py  debug_solver.py  jax_utils.py  misc_utils.py  morph_attributes.py  plot_utils.py  solver_utils.py  syn_utils.py
tests/: conftest.py  helpers.py  test_api_equivalence.py  test_cell_matches_branch.py  test_channels.py  test_clamp.py  test_connection.py  test_data_feeding.py  test_distance.py  test_fixtures.py  test_graph.py  test_groups.py  test_ion_diffusion_and_pumps.py  test_make_trainable.py  test_misc.py  test_moving.py  test_plotting_api.py  test_record_and_stimulate.py  test_regression.py  test_set_ncomp.py  test_shared_state.py  test_solver.py  test_swc.py  test_syn.py  test_synapse_indexing.py  test_transforms.py  test_viewing.py
tests/jaxley_identical/: test_grad.py  test_swc.py
tests/jaxley_vs_neuron/: test_branch.py  test_cell.py  test_comp.py  test_swc.py
